--- a/static/css/style.css
+++ b/static/css/style.css
@@ -224,23 +224,36 @@ table {
     pointer-events: none;
 }
 
+.sub-nav-list {
+    hyphens: auto;
+}
+
+.image-notes {
+    text-align: justify;
+    font-size: 10pt;
+}
+
+.image-info {
+    font-size: 10pt;
+}
+
 /*************** DESKTOP */
 
                 @media only screen and (min-width: 1400px) {
                 :root {
-                    --width-total: 1400px;
-                    --width-menu: 200px;
-                    --width-content: 1050px;
+                    --width-total: 1600px;
+                    --width-menu: 350px;
                     --width-space-scrollbar: 20px;
-                    --width-text: 300px;
-                    --width-text-image-buffer: 20px;
+                    --width-text: 320px;
                     --width-image: 700px;
+                    --width-content: 1050px;
                 }
 
                 .disable_mobile {
                     display: flex;
                 }
 
+                
                 .overlay {
                     width: 100%;
                     height: 100%;
@@ -334,7 +347,6 @@ table {
                         width: var(--width-text);
                         color: var(--c-font); 
                         order: 1;
-                        padding-right: var(--width-text-image-buffer);
                         margin-left: 0;
                         /* background-color: rgb(42, 42, 42); */
                     }
@@ -346,7 +358,7 @@ table {
                     }
 
                     .image {
-                        margin-right: 0;
+                        margin: 0 auto;
                         cursor: pointer;
                         pointer-events: auto;
                     }
@@ -379,6 +391,7 @@ table {
                         pointer-events: auto;
 
                     }
+
                 }
 
                 
