--- a/static/css/style.css
+++ b/static/css/style.css
@@ -389,8 +389,21 @@ table {
                         margin-right: 10px; 
                         cursor: pointer;
                         pointer-events: auto;
-
                     }
+
+                    .fade-in {
+                        opacity: 0;
+                        animation: fadeIn .1s ease-in forwards;
+                      }
+                      
+                      @keyframes fadeIn {
+                        from {
+                          opacity: 0;
+                        }
+                        to {
+                          opacity: 1;
+                        }
+                      }
 
                 }
 
