--- a/templates/article_template01.html
+++ b/templates/article_template01.html
@@ -30,7 +30,7 @@ TEMPLATE
 
 <body>
     <!-- FULL SIZE OVERLAY -->
-    <div id="id-overlay" onclick="toggleOverlay(event)" class="overlay">
+    <div id="id-overlay" onclick="toggleOverlay(event)" class="overlay fade-in">
         <image id="id-image-fullsize" class="image-fullsize"></image>
     </div>
     
