--- a/templates/article_template04.html
+++ b/templates/article_template04.html
@@ -1,4 +1,8 @@
 {%load static%} 
+<!--
+TEMPLATE
+für Lens Modelle
+-->
 
 <!DOCTYPE html>
 <html lang="de">
@@ -106,9 +110,7 @@
                     </tr>
                     <tr>
                         <td>Objektiv:</td>
-                        <td class="cst-content">
-                            {{link.camera.lens.title}}, {{link.camera.lens_type}}
-                        </td>
+                        <td class="cst-content">{{link.camera.lens.title}}, {{link.camera.lens_type}}</td>
                     </tr>
                     <tr>
                         <td>Belichtungsmodus:</td> 
