--- a/templates/stories_overview.html
+++ b/templates/stories_overview.html
@@ -33,13 +33,17 @@
                                 <a class="bold-text" href="/">graintopixel.de</a> 
                                 <br> 
                                 <br>   
-                                <a href="stories">Stories</a>
+                                <a href="/category/stories">Stories</a>
                                 <br>
                                 {% for category in categories %}
-                                <a href="{{category.title}}">{{category.title}}</a>
+                                {% if category.id is not 12 %}
+                                <a href="/category/{{category.title}}">{{category.title}}</a>
                                 <br>
+                                {%endif%}
                                 {% endfor %}
+                                <a href="/uebermich/18">Über mich</a><br>
                                 <br>
+                                
                                 <div class="theme-menu disable_mobile">
                                     <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a>
                                     <br>    
