--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,6 +65,7 @@ li {
 .content-section {
     width: 100%;
     height: auto;
+    scroll-snap-type: y proximity;
 }
 
 .content-preview-section {
@@ -179,6 +180,7 @@ a:hover {
     height: fit-content;
     padding-bottom: 50px;
     hyphens: auto;
+    scroll-snap-align: start;
 }
 
 table {
@@ -228,6 +230,14 @@ table {
     hyphens: auto;
 }
 
+.sub-nav-list li {
+    list-style-type: none;
+    text-indent: 0px; 
+    padding-left: 0px; 
+    line-height: 1.1;
+    padding-bottom: 10px;
+}
+
 .image-notes {
     text-align: justify;
     font-size: 10pt;
@@ -237,27 +247,32 @@ table {
     font-size: 10pt;
 }
 
+.scroll-snap-div {
+    height: 1px;
+    width: 100%;
+    scroll-snap-align: start;
+}
+
 /*************** DESKTOP */
 
-                @media only screen and (min-width: 1400px) {
+                @media only screen and (min-width: 1600px) {
                 :root {
                     --width-total: 1600px;
-                    --width-menu: 350px;
+                    --width-menu: 300px;
                     --width-space-scrollbar: 20px;
-                    --width-text: 320px;
+                    --width-text: 370px;
                     --width-image: 700px;
-                    --width-content: 1050px;
+                    --width-content: 1100px;
                 }
 
                 .disable_mobile {
                     display: flex;
                 }
-
                 
                 .overlay {
                     width: 100%;
                     height: 100%;
-                    background-color: #000000dc;
+                    background-color: #0b0b0bf3;
                     display: none;
                     position: fixed;
                     top: 0;
@@ -282,6 +297,7 @@ table {
                         justify-content: space-between;
                         overflow-y: hidden;
                         margin-top: 30px;
+                    scroll-snap-type: none;
                         /* background-color: rgb(218, 62, 62); */
                     }
 
@@ -393,7 +409,7 @@ table {
 
                     .fade-in {
                         opacity: 0;
-                        animation: fadeIn .1s ease-in forwards;
+                        animation: fadeIn .2s ease-in forwards;
                       }
                       
                       @keyframes fadeIn {
