--- a/templates/article_template01.html
+++ b/templates/article_template01.html
@@ -17,13 +17,13 @@ TEMPLATE
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <link rel="icon" href="/media/favicon.jpg" type="image/x-icon">
     
+    <script src="{% static 'js/script.js' %}"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
     <title>{{story.title}}</title>
-    <script src="{% static 'js/script.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
@@ -43,16 +43,19 @@ TEMPLATE
                         <!-- main nav -->
                         <div>
                             <nav>
-                                <a class="bold-text" href="/">graintopixel.de</a><br>
+                                <a class="bold-text" href="/">graintopixel.de</a> 
+                                <br> 
                                 <br>   
-                               
-                                <a href="/category/stories">Stories</a><br>
-                                
-                                {% for category in categories %}
-                                <a href="/category/{{category.title}}">{{category.title}}</a><br>
-                                {% endfor %}
+                                <a href="/category/stories">Stories</a>
                                 <br>
-
+                                {% for category in categories %}
+                                {% if category.id is not 12 %}
+                                <a href="/category/{{category.title}}">{{category.title}}</a>
+                                <br>
+                                {%endif%}
+                                {% endfor %}
+                                <a href="/uebermich/18">Über mich</a><br>
+                                <br>
                                 <div class="theme-menu disable_mobile">
                                     <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a><br>
                                     <br> 
@@ -94,8 +97,8 @@ TEMPLATE
 
             <!-- BUNDLE -->
             {% for image in article.articleimage_set.all %}
-            
             <div class ="image-text-bundle">
+                <div class="scroll-snap-div"></div>
                 <!-- Image -->
                         <br>    
                 <div class="image-section">
@@ -142,6 +145,7 @@ TEMPLATE
 
         </div> <!-- content-section -->            
     </div> <!-- wrapper -->
+
 </body>
 
 </html>
