--- a/templates/article_template01.html
+++ b/templates/article_template01.html
@@ -55,7 +55,9 @@ TEMPLATE
                                 {%endif%}
                                 {% endfor %}
                                 <a href="/uebermich/18">Über mich</a><br>
+                                <a href="https://paypal.me/oskarantretter1">Buy me a coffe :)</a><br>
                                 <br>
+
                                 <div class="theme-menu disable_mobile">
                                     <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a><br>
                                     <br> 
