--- a/templates/stories_overview.html
+++ b/templates/stories_overview.html
@@ -42,7 +42,9 @@
                                 {%endif%}
                                 {% endfor %}
                                 <a href="/uebermich/18">Über mich</a><br>
+                                <a href="https://paypal.me/oskarantretter1">Buy me a coffe :)</a><br>
                                 <br>
+
                                 
                                 <div class="theme-menu disable_mobile">
                                     <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a>
