--- a/templates/article_template05.html
+++ b/templates/article_template05.html
@@ -1,7 +1,7 @@
 {%load static%} 
 <!--
 TEMPLATE
-für About Me
+für Lens Modelle
 -->
 
 <!DOCTYPE html>
@@ -60,6 +60,16 @@ für About Me
                                     <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a>
                                     <br>    
                                     <br>    
+                                </div>
+
+                                <!-- Artikel nav -->
+                                <div class="sub-nav-div">
+                                    <br>
+                                    {% for article in articles %}
+                                        {% if article.category.id == category.id%}
+                                        <a href="/category/{{category.title}}/article/{{article.id}}">{{article.title}}</a><br>
+                                        {% endif %}
+                                    {% endfor %}
                                 </div>
                             </nav> 
                         </div>
